Revert "Fix sidebar overlapping content on iPad Mini landscape"
This reverts commit 6e97372bddacd20e9ef04d6012489c8504f6b406.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,7 +128,7 @@ body {
       overflow: auto;
    }
    main {
-      grid-column: 2 / 3;
+      grid-column: 1 / 3;
       grid-row: 1 / 2;
       box-sizing: border-box;
    }
@@ -256,6 +256,12 @@ body {
 
 main {
    padding: 0 1.7em;
+}
+
+@media (min-width: 901px) {
+   #command-line-interface-guidelines > section {
+      padding-left: 25%;
+   }
 }
 
 #command-line-interface-guidelines > h1 {
